--- a/My Job/Writing/kapitel/kapitel4.tex
+++ b/My Job/Writing/kapitel/kapitel4.tex
@@ -97,7 +97,7 @@ e(t) = \sqrt{\frac{d(t)}{l}}
 \end{equation}
 where $e$ is the error for the model and $l$ is the length of the time series (here: $l = $ 32 years $\times$ 12 months $= 384$)\\\\
 By presenting the CDF of $e$, the quality of the model can be estimate. By setting the appropriate quantile we are able to choose better time series for further analyse. 
-\section{Estimating the runoff using quantile function and water level height}
+\section{Estimating the runoff using quantile function and water level height}\label{sec:waterlevel}
 Within previous altimetry based studies, the river discharge at the selected gauges is typically determined from an empirical functional relation between water level estimated by satellite altimetry and measured discharges. This relation, referred to as a rating curve, is specific to each gauging station and location of altimetry. However, this technique has many limitations. First, first, this technique is limited by the availability of in situ discharge measurements simultaneous with altimetry data. Second, the location of the altimetry foot- print can also limit the usage of the technique.\\\\
 Fortunately, \cite{tourian2013quantile} provides a methods, which can represent a direct connection between the quantile functions at the corresponding probability and the relationship between runoff and water level. \\\\
 first, we get the quantile functions for altimetric water level,$Q_R(p)$ and discharge from in situ measurement, $Q_W(p)$:
