--- a/My Job/Writing/arbeit.tex
+++ b/My Job/Writing/arbeit.tex
@@ -50,6 +50,7 @@
 \input{kapitel/kapitel3}
 \input{kapitel/kapitel4}
 \input{kapitel/kapitel5}
+\input{kapitel/kapitel6}
 \ifiscorrect\linespread{1.0}\selectfont% Zeilenabstand wieder auf 1 zurück
 \else\fi
 
