--- a/My Job/Writing/extras/titelseite.tex
+++ b/My Job/Writing/extras/titelseite.tex
@@ -26,7 +26,7 @@
 
 %  \vspace*{2cm} % kein Bild: diese Zeile "einkommentieren" ...
   \vspace*{1cm} % ... und diese "auskommentieren ..."
-  {\huge {Understanding total water storage gain in Ob river basin using spaceborn Observation}}\\[10mm]
+  {\huge {Understanding total water storage gain in Ob river basin using spaceborn observation}}\\[10mm]
   \vspace*{1cm} % ... und diese "auskommentieren" ...
 
 %  \vspace*{4cm} % kein Bild: diese Zeile "einkommentieren" ...
@@ -34,7 +34,7 @@
 
   \vfill
 
-  \Large Studienarbeit im Studiengang\\[2mm]
+  \Large Bachelorarbeit im Studiengang\\[2mm]
   \textbf{Geodäsie und Geoinformatik}\\[2mm]
   an der Universität Stuttgart\\[10mm]
   Ziqing. Yu\\[10mm]
