--- a/My Job/Writing/extras/titelseite.tex
+++ b/My Job/Writing/extras/titelseite.tex
@@ -49,7 +49,7 @@
   \begin{minipage}[t][3.0cm]{0.6\textwidth}%
     \large Dr.-Ing. Mohammad Tourian \\
     Universität Stuttgart\\[3mm]
-        Peyman Saemian, M.Sc.\\
+        M.Sc. Peyman Saemian \\
         Universität Stuttgart
         %\\[3mm]
 %    PD Dr.-Ing. Kunz Heinzelmann\\
