--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -146,3 +146,27 @@ publisher={Blackwell Publishing Ltd Oxford, UK}
 	year={2013},
 	publisher={Wiley Online Library}
 }
+
+@article{gleick1993water,
+	title={Water in crisis},
+	author={Gleick, Peter H},
+	journal={Pacific Institute for Studies in Dev., Environment \& Security. Stockholm Env. Institute, Oxford Univ. Press. 473p},
+	volume={9},
+	year={1993}
+}
+
+@article{evans1996effects,
+	title={The effects of changes in the world hydrological cycle on availability of water resources},
+	author={Evans, Terry E},
+	journal={Global Climate Change and Agricultural Production: Direct and Indirect Effects of Changing Hydrological, Pedological and Plant Physiological Processes},
+	pages={15--48},
+	year={1996},
+	publisher={FAO/Wiley Chichester, West Sussex, UK}
+}
+
+@article{ghassemi1995salinization,
+	title={Salinization of land and water resources},
+	author={Ghassemi, F and Jakeman, AJ and Nix, HA},
+	journal={CAB International, Wallingford, UK},
+	year={1995}
+}
